@@ -1,9 +1,21 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT([srcpd], [2.0.8], [Matthias Trute <mtrute@users.sourceforge.net>])
+AC_CANONICAL_TARGET
 AC_CONFIG_SRCDIR([srcpd.c])
 AM_INIT_AUTOMAKE([dist-bzip2])
 
 AC_PREFIX_DEFAULT(/usr/local)
+
+dnl this is from scmxx
+AH_TEMPLATE(
+    [NO_CFMAKERAW],
+    [define this to include own cfmakeraw()]
+)
+AC_CHECK_FUNC(
+    cfmakeraw,
+    [],
+    [AC_DEFINE(NO_CFMAKERAW)]
+)
 
 dnl AC_CONFIG_HEADER(config.h)
 AM_CONFIG_HEADER(config.h)
@@ -14,10 +26,27 @@ AC_PROG_CPP
 AC_PROG_INSTALL
 
 dnl Checks for libraries.
+case $host in
+  *-*-linux*)
+    AC_CHECK_HEADERS(sys/io.h linux/serial.h linux/lp.h)
+    ;;
+  *-*-cygwin*)
+    AC_CHECK_LIB(ioperm, ioperm, , AC_MSG_ERROR(lib ioperm is missing))
+    AC_CHECK_HEADERS(sys/io.h)
+    ;;
+  *-*-freebsd*)
+    AC_CHECK_HEADERS(dev/ppbus/ppi.h dev/ppbus/ppbconf.h)
+    ;;
+  *)
+    AC_MSG_WARN(System $host not known.)
+    ;;
+esac
+
 
 dnl Checks for header files.
-AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h malloc.h syslog.h unistd.h)
+dnl AC_HEADER_STDC
+AC_CHECK_HEADERS(fcntl.h malloc.h syslog.h unistd.h errno.h \
+        pthread.h pwd.h sys/time.h signal.h termios.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -37,7 +66,7 @@ fi
 
 dnl Checks for library functions.
 AC_FUNC_MEMCMP
-AC_CHECK_HEADERS(errno.h pthread.h pwd.h sys/time.h signal.h termios.h)
+AC_CHECK_FUNC(ioperm, , AC_MSG_ERROR(support missing))
 AM_PATH_XML2([2.4.0], [HAVE_XML2=yes], [exit 1])
 
 CFLAGS="${CFLAGS} ${XML_CFLAGS}"
